FIXED: DocBook XSL generated HTML callout lists properly aligned. Submitted by Lionel Orry. See http://groups.google.com/group/asciidoc/browse_frm/thread/2ff802547b6a75ea

--- a/stylesheets/docbook-xsl.css
+++ b/stylesheets/docbook-xsl.css
@@ -268,6 +268,12 @@ div.table p.title
   margin-bottom: 0.4em;
 }
 
+div.calloutlist p
+{
+  margin-top: 0em;
+  margin-bottom: 0.4em;
+}
+
 @media print {
   div.navheader, div.navfooter { display: none; }
 }
